--- a/.github/workflows/ruff.yaml
+++ b/.github/workflows/ruff.yaml
@@ -8,3 +8,10 @@ jobs:
       - uses: chartboost/ruff-action@v1
         with:
           version: 0.2.2
+      - run: pip install ruff
+      - run: | 
+          ruff check .
+          ruff fix .
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: 'style fixes by ruff'
