--- a/.github/workflows/ruff.yaml
+++ b/.github/workflows/ruff.yaml
@@ -7,4 +7,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: chartboost/ruff-action@v1
         with:
-          version: 0.2.2
+          version: 0.3.7
+      - run: | 
+          pip install ruff==0.3.7
+          ruff check .
+          ruff format .
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: 'style fixes by ruff'
