--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -26,7 +26,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python -m pip install -r requirements.txt
+          python -m pip install -r requirements-dev.txt
+          pip install -e .
       - name: Test with pytest
         run: |
           pytest
