--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -28,6 +28,10 @@ jobs:
         run: |
           python -m pip install -r requirements-dev.txt
           pip install -e .
+      - name: Doc test and Build HTML
+      - run: |
+          cd doc
+          make clean html
       - name: Test with pytest
         run: |
           pytest
