--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -32,6 +32,7 @@ jobs:
         run: |
           cd doc
           make clean html
+          make clean doctest
       - name: Test with pytest
         run: |
           pytest
