--- a/.github/workflows/netlify.yaml
+++ b/.github/workflows/netlify.yaml
@@ -2,8 +2,9 @@ name: Build and Deploy to Netlify
 
 on:
   push:
-    branches:
-      - main  # Set this to your default branch
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
