ENH: add support for netlify deployment

--- a/.github/workflows/netlify.yaml
+++ b/.github/workflows/netlify.yaml
@@ -2,9 +2,8 @@ name: Build and Deploy to Netlify
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main  # Set this to your default branch
 
 jobs:
   build:
