--- a/.github/workflows/netlify.yaml
+++ b/.github/workflows/netlify.yaml
@@ -31,7 +31,7 @@ jobs:
       uses: nwtgck/actions-netlify@v1.1
       with:
         publish-dir: 'doc/_build/html'
-        production-branch: master
+        production-branch: main
         github-token: ${{ secrets.GITHUB_TOKEN }}
         deploy-message: "Deploy from GitHub Actions"
         enable-pull-request-comment: false
