--- a/.github/workflows/netlify.yaml
+++ b/.github/workflows/netlify.yaml
@@ -21,10 +21,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requirements-dev.txt
-
-    - name: Build Sphinx Documentation
-      run: |
+        python -m pip install -r requirements-dev.txt
+        pip install -e .
         cd doc
         make clean html
         ls -al
