--- a/.github/workflows/netlify.yaml
+++ b/.github/workflows/netlify.yaml
@@ -12,12 +12,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.9'  # Set this to your preferred version
-
+        python-version: '3.11'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -26,7 +24,6 @@ jobs:
         cd doc
         make clean html
         ls -al
-
     - name: Deploy to Netlify
       uses: nwtgck/actions-netlify@v1.1
       with:
