--- a/.github/workflows/netlify.yaml
+++ b/.github/workflows/netlify.yaml
@@ -2,35 +2,15 @@ name: Build and Deploy to Netlify
 
 on:
   push:
-    branches:
-      - main  # Set this to your default branch
+    branches: [ "main" ]
 
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - uses: nwtgck/actions-netlify@v1.1
       with:
-        python-version: '3.12'  # Set this to your preferred version
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requirements-dev.txt
-
-    - name: Build Sphinx Documentation
-      run: |
-        cd doc
-        make clean html
-
-    - name: Deploy to Netlify
-      uses: nwtgck/actions-netlify@v1.1
-      with:
-        publish-dir: 'doc/_build/html'
         production-branch: main
         github-token: ${{ secrets.GITHUB_TOKEN }}
         deploy-message: "Deploy from GitHub Actions"
@@ -41,4 +21,3 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         timeout-minutes: 1
-
