--- a/.github/workflows/netlify.yaml
+++ b/.github/workflows/netlify.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build_and_deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
