--- a/.github/workflows/ruff.yaml
+++ b/.github/workflows/ruff.yaml
@@ -12,6 +12,6 @@ jobs:
           pip install ruff==0.3.7
           ruff check .
           ruff format .
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: 'DOC: style fix by ruff'
+#      - uses: stefanzweifel/git-auto-commit-action@v4
+#        with:
+#          commit_message: 'DOC: style fix by ruff'
