--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,7 +13,7 @@ hypothesis
 # For linting
 ruff==0.3.7
 # For doc testing
-sphinx
-sphinx_design
-pydata-sphinx-theme
+sphinx==7.3.7
+sphinx_design==0.5.0
+pydata-sphinx-theme==0.15.2
 ipython
